[package]
name = "emu"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
signal-hook = "0.1.13"
crossterm = "0.17.5"
timer = "0.2.0"
chrono = "0.4.11"
num_enum = "0.5.0"